--- a/src/main/resources/TacGia.fxml
+++ b/src/main/resources/TacGia.fxml
@@ -15,25 +15,52 @@
     <children>
         <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-4.0" prefHeight="569.0" prefWidth="958.0">
             <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
+                <AnchorPane fx:id="anchorPaneMenu" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
                     <children>
-                        <Button layoutY="131.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Thống kê">
+                        <Button fx:id="btnThongKe" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="57.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Thống kê" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button layoutY="331.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách hàng">
+                        <Button fx:id="btnKhachHang" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="210.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách hàng" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button layoutY="263.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Sản phẩm">
+                        <Button fx:id="btnSanPham" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="159.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Sản phẩm" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button layoutY="195.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhân viên">
+                        <Button fx:id="btnNhanVien" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="108.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhân viên" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
+                        <Button fx:id="btnNCC" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="261.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Nhà cung cấp" AnchorPane.leftAnchor="0.0">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Button>
+                        <Button fx:id="btnTacGia" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="312.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tác giả" AnchorPane.leftAnchor="0.0">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Button>
+                        <Button fx:id="btnHoaDon" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="363.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Hóa đơn" AnchorPane.leftAnchor="0.0">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Button>
+                        <Button fx:id="btnTHD" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="414.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tạo hóa đơn" AnchorPane.leftAnchor="0.0">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Button>
+                        <Button fx:id="btnKhuyenMai" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="465.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Khuyến mãi" AnchorPane.leftAnchor="0.0">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Button>
                     </children>
+                    <padding>
+                    </padding>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="563.0" prefWidth="702.0">
                <children>
